<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ch.checkbit.sia.activity.TodoActivity"
    tools:showIn="@layout/activity_todo">

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/archive_mode"
        android:minWidth="200dp"
        android:layout_gravity="top"
        android:layout_alignParentRight="true"
        android:textSize="@dimen/font_size_controls"
        android:id="@+id/todo_archive_mode"
        android:textColor="@color/colorAccent"
        android:padding="10dp"
        android:nestedScrollingEnabled="false"
        android:textOff="@string/archive_mode_off"
        android:textOn="@string/archive_mode_on" />

    <View
        android:layout_width="match_parent"
        android:id="@+id/divider"
        android:layout_below="@+id/todo_archive_mode"
        android:layout_height="1dip"
        android:background="@color/colorPrimary" />

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/listview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10px"
        android:layout_below="@+id/divider"
        />

</RelativeLayout>
